--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:exported="false">
         </activity>
         <activity
-            android:name=".register"
+            android:name=".SignUp"
             android:exported="false" />
     </application>
 
