--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodieHaven"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".Cart"-->
+<!--            android:exported="false" />-->
+        <activity
+            android:name=".OrderAct"
+            android:exported="false" />
+        <activity
+            android:name=".Order"
+            android:exported="false" />
         <activity
             android:name=".Login"
             android:exported="true">
@@ -23,8 +32,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".SignUp"
             android:exported="false" />
